@@ -15,6 +15,8 @@ git-annex (7.20191231) UNRELEASED; urgency=medium
     git annex initremote type=directory encryption=none --whatelse
   * Added LISTCONFIGS to external special remote protocol. Special remote
     programs that use GETCONFIG/SETCONFIG are recommended to implement it.
+  * init: Avoid an ugly error message when http remote has no git-annex
+    uuid configured.
 
  -- Joey Hess <id@joeyh.name>  Wed, 01 Jan 2020 12:51:40 -0400
 
